[package]
name = "imchat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
# cors
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.97"
time = "0.3.39"
